--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
+script:
+  - cargo build --verbose --all --release
+  - cargo test --verbose --all
